fixed preview contrasts

--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -288,7 +288,7 @@ ul.ui.list li,
     }
   }
 
-  .content .header {
+  .content .header, .content .meta {
     color: white;
   }
 
